# Fractalloc

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: ci.yml  dispatch.yml
include/Fractalloc/: Allocator.hpp
source/: Allocation.hpp  Allocation.inl  Allocator.cpp  Config.hpp  Pool.hpp  Pool.inl
test/: CMakeLists.txt  Main.cpp  Main.hpp  TestAllocator.cpp  TestNewDelete.cpp
